<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_person"
        android:orderInCategory="1"
        android:title="@string/profile_menu_item"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/followingPosts"
        android:icon="@drawable/ic_following_posts"
        android:orderInCategory="5"
        android:title="@string/following_post_menu_item"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="0"
        android:title="@string/search_menu_item"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/ticketing"
        android:icon="@drawable/ic_ticket"
        android:orderInCategory="2"
        android:title="@string/reclamations"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/notif"
        android:icon="@drawable/ic_notif"
        android:orderInCategory="6"
        android:title="@string/notification"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/tools"
        android:icon="@drawable/ic_money"
        android:orderInCategory="4"
        android:title="Reglements"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_info"
        android:orderInCategory="9"
        android:title="A propos"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/config"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="8"
        android:title="Configuration"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/gallerie"
        android:icon="@drawable/ic_galerie"
        android:orderInCategory="7"
        android:title="Galerie"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/calendar"
        android:icon="@drawable/ic_calendar"
        android:orderInCategory="3"
        android:title="Calendrier"
        app:showAsAction="collapseActionView" />

</menu>

