<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/intrinsic_padding"
    tools:context="com.gst.socialcomponents.main.editProfile.EditProfileActivity">

    <ScrollView
        android:id="@+id/regForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/imageContainer"
                android:layout_width="@dimen/profile_photo_side"
                android:layout_height="@dimen/profile_photo_side"
                android:layout_gravity="center_horizontal">

                <ProgressBar
                    android:id="@+id/avatarProgressBar"
                    android:layout_width="@dimen/progress_bar_size"
                    android:layout_height="@dimen/progress_bar_size"
                    android:layout_centerInParent="true"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/drawer_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible" />

            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                    <EditText
                 android:id="@+id/nameEditText"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                    android:hint="@string/prompt_name"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"/>


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/residence_name"
                android:paddingTop="2dp"
                android:paddingBottom="5dp">

                <TextView
                    style="@style/InputLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text=" Residence"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/simpleSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/residence_name"
                     android:imeOptions="actionDone" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/numresidenceEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/numresidence_name"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"/>


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/numtelEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/numtel"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
